# bazaraki

./: .dockerignore  .gitignore  Dockerfile  Makefile  count_ads.ipynb  pyproject.toml  reduce.ipynb  rent_speed.ipynb  report.ipynb  rnd.ipynb
.github/workflows/: scraper.yml
bazaraki/: pipelines.py  schedule.py  settings.py  utils.py
bazaraki/spiders/: property.py
