[project]
name = "bazaraki"
version = "0.1.0"
description = ""
authors = [{ name = "Alekei Grachev", email = "aleksei.grachev@alberblanc.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "cookiecutter>=2.6.0,<3",
    "scrapy>=2.12.0,<3",
    "pandas>=2.2.3,<3",
    "plotly>=5.24.1,<6",
    "nbformat>=5.10.4,<6",
    "dtale>=3.16.0,<4",
    "kaleido==0.2.1",
    "loguru>=0.7.3,<0.8",
    "tqdm>=4.67.1,<5",
    "swifter>=1.4.0,<2",
    "datacompy>=0.14.4,<0.15",
    "parse>=1.20.2,<2",
    "pandarallel>=1.6.5,<2",
    "apscheduler>=3.11.0,<4",
    "click>=8.1.8,<9",
    "jupyter>=1.1.1",
]

[project.scripts]
schedule = "bazaraki.schedule:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
